--- a/Project-2-AmEx-Credit-Card-Default-/notebooks/data_wrangling_2capstone.ipynb
+++ b/Project-2-AmEx-Credit-Card-Default-/notebooks/data_wrangling_2capstone.ipynb
@@ -8,6 +8,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -20,7 +21,8 @@
     "  * [1.3 Imports](#1.3_Imports)\n",
     "  * [1.4 Objectives](#1.4_Objectives)\n",
     "  * [1.5 Data Collection](#1.5_Data_Collection)\n",
-    "  * [1.6 Saving Clean Data](#1.6_Saving_Clean_Data)\n",
+    "  * [1.6 Data Cleaning](#1.6_Data_Cleaning)\n",
+    "  * [1.7 Saving Clean Data](#1.7_Saving_Clean_Data)\n",
     "  "
    ]
   },
@@ -33,6 +35,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -121,10 +124,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 1.7 Data Cleaning<a id='1.7_Data Cleaning'></a>"
+    "##### 1.6 Data Cleaning<a id='1.6_Data Cleaning'></a>"
    ]
   },
   {
@@ -1444,7 +1448,7 @@
     "# separating the credit card default feature and plotting the distribution of the numerical variables to explore\n",
     "train_y = numerical_data['credit_card_default']\n",
     "numerical_data.drop('credit_card_default', axis=1, inplace=True)\n",
-    "numerical_data.hist(figsize=(15,10), bins=20)\n",
+    "numerical_data.hist(figsize=(15,10))\n",
     "plt.subplots_adjust(hspace=0.5);"
    ]
   },
@@ -1486,6 +1490,30 @@
     "    plt.subplot(4,3,i[0]+1)\n",
     "    sns.boxplot(data=numerical_data[i[1]], x=numerical_data[i[1]])\n",
     "    plt.xlabel(i[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Outliers: statistical significance -> do some research\n",
+    "\n",
+    "look online - data missigness / randomness > do some research\n",
+    "\n",
+    "data variability > look and check at this stage"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "supervised learning: \n",
+    "\n",
+    "classification / regression\n",
+    "\n",
+    "\n",
+    "time series analysis -> finance people\n",
+    "basic fundamentals - strong fundamentals > more complicate then > time series"
    ]
   },
   {
@@ -2313,6 +2341,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 1.7 Saving Clean Data<a id='1.7_Saving Clean Data'></a>"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2346,7 +2382,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.13 | packaged by conda-forge | (default, Mar 25 2022, 06:05:47) \n[Clang 12.0.1 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
