uploaded metrics, results, pdf report

--- a/Project-2-AmEx-Credit-Card-Default-/notebooks/modeling_amex.ipynb
+++ b/Project-2-AmEx-Credit-Card-Default-/notebooks/modeling_amex.ipynb
@@ -2115,20 +2115,57 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_xgb_model = best_xgb_model.fit(X_train, y_train_1d)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Deployment of Model in Unseen Test Set"
+    "#### - Saving The XGBoost Classification Model:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['../model-xgb/min-max-scaler.pkl']"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "test_df = load_data('../data/raw/test.csv')"
+    "import joblib\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "\n",
+    "# saving the model as a pickle file\n",
+    "joblib.dump(best_xgb_model, '../model-xgb/best_xgb_model.pkl')\n",
+    "\n",
+    "# saving the imputer\n",
+    "imputer = SimpleImputer(strategy='median')\n",
+    "imputer = imputer.fit(X_train)\n",
+    "\n",
+    "joblib.dump(imputer, '../model-xgb/simple_imputer.pkl')\n",
+    "\n",
+    "# saving the scaler\n",
+    "scaler = MinMaxScaler()\n",
+    "scaler = scaler.fit(X_train)\n",
+    "\n",
+    "joblib.dump(scaler, '../model-xgb/min-max-scaler.pkl')\n"
    ]
   }
  ],
