uploaded figure, deployment notebook, improved py scripts

--- a/Project-2-AmEx-Credit-Card-Default-/notebooks/modeling_amex.ipynb
+++ b/Project-2-AmEx-Credit-Card-Default-/notebooks/modeling_amex.ipynb
@@ -2062,7 +2062,7 @@
     "import os\n",
     "\n",
     "# defining the directory and filename\n",
-    "directory = \"../reports/documentation/\"\n",
+    "directory = \"../metrics/\"\n",
     "filename = \"model_metrics.csv\"\n",
     "path = os.path.join(directory, filename)\n",
     "\n",
@@ -2153,19 +2153,19 @@
     "from sklearn.impute import SimpleImputer\n",
     "\n",
     "# saving the model as a pickle file\n",
-    "joblib.dump(best_xgb_model, '../model-xgb/best_xgb_model.pkl')\n",
+    "joblib.dump(best_xgb_model, '../models/best_xgb_model.pkl')\n",
     "\n",
     "# saving the imputer\n",
     "imputer = SimpleImputer(strategy='median')\n",
     "imputer = imputer.fit(X_train)\n",
     "\n",
-    "joblib.dump(imputer, '../model-xgb/simple_imputer.pkl')\n",
+    "joblib.dump(imputer, '../models/simple_imputer.pkl')\n",
     "\n",
     "# saving the scaler\n",
     "scaler = MinMaxScaler()\n",
     "scaler = scaler.fit(X_train)\n",
     "\n",
-    "joblib.dump(scaler, '../model-xgb/min-max-scaler.pkl')\n"
+    "joblib.dump(scaler, '../models/min-max-scaler.pkl')\n"
    ]
   }
  ],
